[WFX-266] about:preferences improvements. (#2364)
* [WFX-267] Fix 'Recent Activity' row number selection.

* [WFX-266] Modify about:preferences directly.

* [WFX-269] Add additional preferences to about:preferences#privacy.

--- a/browser/extensions/extensibles/manifest.json
+++ b/browser/extensions/extensibles/manifest.json
@@ -43,7 +43,6 @@
       "privatetab/background.js",
       "statusbar/background.js",
       "tabfeatures/background.js",
-      "aboutpreferences/background.js",
       "addon-stores/cws.js",
       "addon-stores/ows.js"
     ]
@@ -61,8 +60,7 @@
           ["extensibles", "utils"],
           ["extensibles", "privatetab"],
           ["extensibles", "statusbar"],
-          ["extensibles", "tabfeatures"],
-          ["extensibles", "prefsext"]
+          ["extensibles", "tabfeatures"]
         ]
       }
     }
