--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,9 @@ jobs:
   soft-release:
     name: Soft Release
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Download assets
         run: |
@@ -19,7 +22,7 @@ jobs:
           wget2 https://cdn.waterfox.net/staging/x86_64/Windows_NT/Waterfox\ ${{ github.event.inputs.version }}\ Setup.exe
           wget2 https://cdn.waterfox.net/staging/x86_64/Linux/waterfox-${{ github.event.inputs.version }}.en-US.linux-x86_64.tar.bz2
           wget2 https://cdn.waterfox.net/staging/x86_64/Darwin/Waterfox\ ${{ github.event.inputs.version }}\ Setup.dmg
-          wget2 https://cdn.waterfox.net/staging/aarch64/Darwin/Waterfox\ ${{ github.event.inputs.version }}\ ARM\ Setup.dmg 
+          wget2 https://cdn.waterfox.net/staging/aarch64/Darwin/Waterfox\ ${{ github.event.inputs.version }}\ ARM\ Setup.dmg
 
       - name: Release Step
         uses: ncipollo/release-action@v1
@@ -63,26 +66,37 @@ jobs:
           tag: ${{ github.event.inputs.version }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Dry run AUS
+      - name: ⚙︎ Dry run AUS
         run: |
-          os=(WINNT_x86_64 Linux_x86_64 Darwin_x86_64 Darwin_aarch64)
-          for i in ${os[@]}
+          for i in $(aws s3 ls s3://aus.waterfox.net/update/Waterfox/ | awk '{OFS=" "};{if ($1=="PRE") print $2}')
           do
-            update_loc='s3://aus.waterfox.net/update/staging/$i/update.xml'
-            for j in $(AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 ls s3://aus.waterfox.net/update/Waterfox/ | awk '{OFS=" "};{if ($1=="PRE") print $2}')
-            do
-              if [[ $j != '/' ]]
+              if [[ $i != '/' ]]
               then
-              ver=$(echo $j | sed 's/\///g')
-              AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
-                s3://aus.waterfox.net/update/Waterfox/$ver/default/$i/update.xml
+              ver=$(echo $i | sed 's/\///g')
+                  if [[ $i == "G3"* ]]
+                  then
+                      os=(Windows_NT Linux Darwin)
+                      for j in ${os[@]}
+                      do
+                      update_loc="s3://aus.waterfox.net/update/staging/"$j"_x86_64/update.xml"
+                        if [[ $j == "WINNT" ]]
+                        then
+                          j="Windows_NT"
+                        fi
+                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
+                      done
+                  elif [[ $i == "G4"* ]]
+                  then
+                      os=(WINNT_x86_64 Linux_x86_64 Darwin_x86_64 Darwin_aarch64)
+                      for j in ${os[@]}
+                      do
+                          update_loc="s3://aus.waterfox.net/update/staging/$j/update.xml"
+                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
+                      done
+                  fi
               fi
-            done
-            # grab the current version so we can create a new dir with a blank xml
-            touch blank.xml
-            echo "<?xml version="1.0"?><updates></updates>" >> blank.xml
-            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 blank.xml \
-              s3://aus.waterfox.net/update/Waterfox/${{ github.event.inputs.version }}/default/$i/update.xml
           done
 
       # - name: Rebuild website
@@ -94,35 +108,54 @@ jobs:
       #     -H "X-Auth-Email": ${{ secrets.CF_EMAIL }} \
       #     -H "X-Auth-Key": ${{ secrets.CF_API_KEY }} \
       #     https://api.cloudflare.com/client/v4/accounts/${{ secrets.CF_ACCT_ID }}/pages/projects/${{ secrets.CF_PROJECT_NAME }}/deployments
-          
+
   hard-release:
     name: Full Release
     needs: [soft-release]
     environment: hard-release
     runs-on: ubuntu-latest
     steps:
-      # - name: Release AUS
-      #   run: |
-      #     os=(WINNT_x86_64 Linux_x86_64 Darwin_x86_64 Darwin_aarch64)
-      #     for i in ${os[@]}
-      #     do
-      #       update_loc='s3://aus.waterfox.net/update/staging/$i/update.xml'
-      #       for j in $(AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 ls s3://aus.waterfox.net/update/Waterfox/ | awk '{OFS=" "};{if ($1=="PRE") print $2}')
-      #       do
-      #         if [[ $j != '/' ]]
-      #         then
-      #         ver=$(echo $j | sed 's/\///g')
-      #         AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
-      #           s3://aus.waterfox.net/update/Waterfox/$ver/default/$i/update.xml
-      #         fi
-      #       done
-      #       # grab the current version so we can create a new dir with a blank xml
-      #       touch blank.xml
-      #       echo "<?xml version="1.0"?><updates></updates>" >> blank.xml
-      #       AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 blank.xml \
-      #         s3://aus.waterfox.net/update/Waterfox/${{ github.event.inputs.version }}/default/$i/update.xml
-      #     done
-      - name: Move from staging
+      - name: ⚙︎ Release AUS
+        run: |
+          for i in $(aws s3 ls s3://aus.waterfox.net/update/Waterfox/ | awk '{OFS=" "};{if ($1=="PRE") print $2}')
+          do
+              if [[ $i != '/' ]]
+              then
+              ver=$(echo $i | sed 's/\///g')
+                  if [[ $i == "G3"* ]]
+                  then
+                      os=(Windows_NT Linux Darwin)
+                      for j in ${os[@]}
+                      do
+                      update_loc="s3://aus.waterfox.net/update/staging/"$j"_x86_64/update.xml"
+                        if [[ $j == "WINNT" ]]
+                        then
+                          j="Windows_NT"
+                        fi
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
+                      done
+                  elif [[ $i == "G4"* ]]
+                  then
+                      os=(WINNT_x86_64 Linux_x86_64 Darwin_x86_64 Darwin_aarch64)
+                      for j in ${os[@]}
+                      do
+                          update_loc="s3://aus.waterfox.net/update/staging/$j/update.xml"
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
+                      done
+                  fi
+              fi
+          done
+          touch blank.xml
+          echo '<?xml version="1.0"?><updates></updates>' > blank.xml
+          os=(WINNT_x86_64 Linux_x86_64 Darwin_x86_64 Darwin_aarch64)
+          for i in ${os[@]}
+          do
+              aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" blank.xml \
+                  s3://aus.waterfox.net/update/Waterfox/${{ github.event.inputs.version }}/default/$i/update.xml
+          done
+      - name: ⎆ Move from staging
         run: |
           ftp -n -v ftp.keycdn.com << EOT
           ascii
