--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Workflow
+name: 🎁 Release Workflow
 
 on:
   workflow_dispatch:
@@ -83,7 +83,14 @@ jobs:
                         then
                           j="Windows_NT"
                         fi
-                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          mkdir -p ./update/Waterfox/$ver/default/$j/
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Linux/releases\/linux64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Windows_NT/releases\/win64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/aarch64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 ./update/Waterfox/$ver/default/$j/update.xml \
                           s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
                       done
                   elif [[ $i == "G4"* ]]
@@ -92,27 +99,27 @@ jobs:
                       for j in ${os[@]}
                       do
                           update_loc="s3://aus.waterfox.net/update/staging/$j/update.xml"
-                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          mkdir -p ./update/Waterfox/$ver/default/$j/
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Linux/releases\/linux64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Windows_NT/releases\/win64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/aarch64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          aws s3 cp --dryrun --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 ./update/Waterfox/$ver/default/$j/update.xml \
                           s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
                       done
                   fi
               fi
           done
 
-      # - name: Rebuild website
-      #   run: |
-      #     # POST request to Cloudflare endpoint
-      #     curl \
-      #     -X POST \
-      #     -H "content-type": "application/json;charset=UTF-8" \
-      #     -H "X-Auth-Email": ${{ secrets.CF_EMAIL }} \
-      #     -H "X-Auth-Key": ${{ secrets.CF_API_KEY }} \
-      #     https://api.cloudflare.com/client/v4/accounts/${{ secrets.CF_ACCT_ID }}/pages/projects/${{ secrets.CF_PROJECT_NAME }}/deployments
-
   hard-release:
     name: Full Release
     needs: [soft-release]
     environment: hard-release
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     runs-on: ubuntu-latest
     steps:
       - name: ⚙︎ Release AUS
@@ -132,7 +139,14 @@ jobs:
                         then
                           j="Windows_NT"
                         fi
+                          mkdir -p ./update/Waterfox/$ver/default/$j/
                           aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Linux/releases\/linux64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Windows_NT/releases\/win64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/aarch64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 ./update/Waterfox/$ver/default/$j/update.xml \
                           s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
                       done
                   elif [[ $i == "G4"* ]]
@@ -141,7 +155,14 @@ jobs:
                       for j in ${os[@]}
                       do
                           update_loc="s3://aus.waterfox.net/update/staging/$j/update.xml"
+                          mkdir -p ./update/Waterfox/$ver/default/$j/
                           aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 $update_loc \
+                          ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Linux/releases\/linux64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Windows_NT/releases\/win64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/x86_64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          sed -i 's/staging\/aarch64\/Darwin/releases\/osx64\/update/g' ./update/Waterfox/$ver/default/$j/update.xml
+                          aws s3 cp --content-type="text/xml" --metadata-directive="REPLACE" --region=us-west-2 ./update/Waterfox/$ver/default/$j/update.xml \
                           s3://aus.waterfox.net/update/Waterfox/$ver/default/$j/update.xml
                       done
                   fi
