[WFX-167] Add functionality to open tabs after all existing and to keep pinned tabs full size to about:preferences.

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1348,6 +1348,12 @@
   value: "#551A8B"
   mirror: never
 
+- name: browser.tabs.pinnedIconOnly
+  type: RelaxedAtomicBool
+  value: true
+  mirror: always
+  rust: true
+
 #---------------------------------------------------------------------------
 # Prefs starting with "canvas."
 #---------------------------------------------------------------------------
