[WFX-335] Add option to make status bar text more or less visible.

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -1354,6 +1354,12 @@
   mirror: always
   rust: true
 
+- name: browser.statusbar.contrastText
+  type: RelaxedAtomicBool
+  value: true
+  mirror: always
+  rust: true
+
 #---------------------------------------------------------------------------
 # Prefs starting with "canvas."
 #---------------------------------------------------------------------------
