--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,9 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   WFX_RELEASE: 1
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   windows-x64:
     name: 🪟 Windows X64
