Bug 1795042 - Migrate generate-profile tasks from AWS -> GCP, r=MasterWayZ
Differential Revision: https://phabricator.services.mozilla.com/D159283

--- a/taskcluster/ci/generate-profile/kind.yml
+++ b/taskcluster/ci/generate-profile/kind.yml
@@ -33,7 +33,7 @@ jobs:
             job-name: linux-profile
         treeherder:
             platform: linux32-shippable/opt
-        worker-type: b-linux
+        worker-type: b-linux-gcp
         worker:
             chain-of-trust: true
             env:
@@ -64,7 +64,7 @@ jobs:
             job-name: linux64-profile
         treeherder:
             platform: linux64-shippable/opt
-        worker-type: b-linux
+        worker-type: b-linux-gcp
         worker:
             chain-of-trust: true
             env:
