--- a/browser/base/content/test/popups/browser.ini
+++ b/browser/base/content/test/popups/browser.ini
@@ -37,3 +37,6 @@ support-files =
 skip-if = debug # This test triggers Bug 1578794 due to opening many popups.
 [browser_popup_inner_outer_size.js]
 [browser_popup_new_window_resize.js]
+[browser_popup_new_window_size.js]
+support-files =
+  popup_size.html
