Bug 1794463 - Refine telemetry to count insecure OpenSearch search engines (don't count localhost and .onion as insecure). r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D159211

--- a/toolkit/components/search/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/search/tests/xpcshell/xpcshell.ini
@@ -165,6 +165,9 @@ support-files =
   opensearch/insecure-and-insecurely-updated2.xml
   opensearch/secure-and-no-update-url1.xml
   opensearch/insecure-and-no-update-url1.xml
+  opensearch/secure-localhost.xml
+  opensearch/secure-onionv2.xml
+  opensearch/secure-onionv3.xml
 [test_opensearch_update.js]
 skip-if =
   debug && socketprocess_networking # Bug 1759035
