Bug 1750691 - [rust-mozversion] Cargo vet version 0.5.0. r=supply-chain-reviewers,bholley
Differential Revision: https://phabricator.services.mozilla.com/D159361

--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -110,6 +110,10 @@ notes = "This is a first-party crate which is also published to crates.io, but w
 audit-as-crates-io = true
 notes = "This is a first-party crate which is also published to crates.io, but we should publish audits for it for the benefit of the ecosystem."
 
+[policy.mozversion]
+audit-as-crates-io = true
+notes = "This is a first-party crate which is also published to crates.io, but we should publish audits for it for the benefit of the ecosystem."
+
 [policy.naga]
 audit-as-crates-io = true
 notes = "wgpu-core pins this crate."
