--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -696,6 +696,12 @@ criteria = "safe-to-deploy"
 version = "0.15.0"
 notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
 
+[[audits.mozversion]]
+who = "Henrik Skupin <mail@hskupin.info>"
+criteria = "safe-to-run"
+version = "0.5.0"
+notes = "Maintained by the DevTools team at Mozilla and has no unsafe code."
+
 [[audits.naga]]
 who = "Dzmitry Malyshau <kvark@fastmail.com>"
 criteria = "safe-to-deploy"
