Bug 1794956 - Repair and enable test_offscreencanvas_toimagebitmap.html. r=gfx-reviewers,lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D159453

--- a/dom/canvas/test/mochitest.ini
+++ b/dom/canvas/test/mochitest.ini
@@ -172,7 +172,8 @@ skip-if = 1
 [test_offscreencanvas_toimagebitmap.html]
 subsuite = gpu
 tags = offscreencanvas
-skip-if = 1
+# https://bugzilla.mozilla.org/show_bug.cgi?id=1795521
+skip-if = (toolkit == 'android' && debug)
 [test_offscreencanvas_basic_webgl.html]
 subsuite = gpu
 tags = offscreencanvas
