Bug 1783287 - disable test_peerConnection_verifyAudioAfterRenegotiation.html on android x86_64 opt for frequent failures. r=intermittent-reviewers,MasterWayZ
Differential Revision: https://phabricator.services.mozilla.com/D159458

--- a/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.ini
+++ b/dom/media/webrtc/tests/mochitests/mochitest_peerconnection.ini
@@ -236,6 +236,8 @@ skip-if = (toolkit == 'android') || (os == 'linux' && asan) # android(Bug 118978
 [test_peerConnection_addDataChannel.html]
 [test_peerConnection_addDataChannelNoBundle.html]
 [test_peerConnection_verifyAudioAfterRenegotiation.html]
+skip-if =
+  os == "android" && processor == "x86_64" && !debug # Bug 1783287
 [test_peerConnection_verifyVideoAfterRenegotiation.html]
 [test_peerConnection_videoCodecs.html]
 skip-if =
