Bug 1795595 - [devtools] Add 'Copy as PowerShell' command to request list context menu r=ochameau
Differential Revision: https://phabricator.services.mozilla.com/D157711

--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -152,6 +152,7 @@ skip-if =
 skip-if = (verify && debug && os == 'win')
 [browser_net_copy_as_curl.js]
 [browser_net_copy_as_fetch.js]
+[browser_net_copy_as_powershell.js]
 [browser_net_use_as_fetch.js]
 [browser_net_cors_requests.js]
 [browser_net_cyrillic-01.js]
