Bug 1793925 - Warn about complex versioning formats used in manifest. r=robwu
Differential Revision: https://phabricator.services.mozilla.com/D158834

--- a/toolkit/components/extensions/schemas/manifest.json
+++ b/toolkit/components/extensions/schemas/manifest.json
@@ -53,7 +53,8 @@
 
           "version": {
             "type": "string",
-            "optional": false
+            "optional": false,
+            "format": "versionString"
           },
 
           "homepage_url": {
