Bug 1755660 - Add tests for cancelling proxied channels r=necko-reviewers,kershaw
Differential Revision: https://phabricator.services.mozilla.com/D157092

--- a/netwerk/test/unit/xpcshell.ini
+++ b/netwerk/test/unit/xpcshell.ini
@@ -205,6 +205,7 @@ skip-if = appname == 'thunderbird'
 reason = Thunderbird runs with fission enabled. This test requires fission.autostart=false. Bug 1749403.
 [test_cookies_upgrade_10.js]
 [test_dns_cancel.js]
+skip-if = verify
 [test_data_protocol.js]
 [test_dns_service.js]
 [test_dns_offline.js]
@@ -645,4 +646,5 @@ run-sequentially = node server exceptions dont replay well
 [test_h2proxy_connection_limit.js]
 run-sequentially = node server exceptions dont replay well
 [test_pac_reload_after_network_change.js]
+[test_proxy_cancel.js]
 [test_connection_based_auth.js]
