--- a/browser/components/customizableui/test/browser.ini
+++ b/browser/components/customizableui/test/browser.ini
@@ -116,6 +116,7 @@ skip-if = verify
 [browser_1484275_PanelMultiView_toggle_with_other_popup.js]
 [browser_1701883_restore_defaults_pocket_pref.js]
 [browser_1702200_PanelMultiView_header_separator.js]
+[browser_1795260_searchbar_overflow_toolbar.js]
 [browser_allow_dragging_removable_false.js]
 [browser_bookmarks_toolbar_collapsed_restore_default.js]
 [browser_bookmarks_toolbar_shown_newtab.js]
