Bug 1788953 - Part 1: Add originalURI to browser-custom-element - r=adw
Differential Revision: https://phabricator.services.mozilla.com/D157485

--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -16,6 +16,12 @@ support-files =
 tags = audiochannel
 [browser_bug_1387976_restore_lazy_tab_browser_muted_state.js]
 [browser_bug580956.js]
+[browser_originalURI.js]
+support-files =
+  page_with_iframe.html
+  redirect_via_header.html
+  redirect_via_header.html^headers^
+  redirect_via_meta_tag.html
 [browser_close_during_beforeunload.js]
 https_first_disabled = true
 [browser_close_tab_by_dblclick.js]
