--- a/browser/components/urlbar/tests/browser/browser.ini
+++ b/browser/components/urlbar/tests/browser/browser.ini
@@ -370,6 +370,7 @@ skip-if =
 [browser_UrlbarInput_overflow.js]
 [browser_UrlbarInput_overflow_resize.js]
 [browser_UrlbarInput_searchTerms.js]
+[browser_UrlbarInput_searchTerms_backgroundTabs.js]
 [browser_UrlbarInput_searchTerms_modifiedUrl.js]
 [browser_UrlbarInput_searchTerms_revert.js]
 [browser_UrlbarInput_searchTerms_searchBar.js]
