--- a/accessible/tests/browser/states/browser.ini
+++ b/accessible/tests/browser/states/browser.ini
@@ -13,7 +13,7 @@ skip-if = verify
 https_first_disabled = true
 skip-if =
   os == 'win' && bits == 64 && !debug # bug 1652192
-[browser_offscreen_element_in_out_of_process_iframe.js]
+[browser_test_visibility_2.js]
+https_first_disabled = true
 skip-if =
-  os == 'win' # bug 1580706
-  apple_catalina # high frequency intermittent
+  os == 'win' && bits == 64 && !debug # bug 1652192
