Bug 1696693 - Don't blit-tex-upload for srgb textures. r=gfx-reviewers,bradwerth
Differential Revision: https://phabricator.services.mozilla.com/D159649

--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -2494,6 +2494,7 @@ support-files = always-fail.html
                 checkout/conformance/textures/misc/texture-size-cube-maps.html
                 checkout/conformance/textures/misc/texture-size-limit.html
                 checkout/conformance/textures/misc/texture-size.html
+                checkout/conformance/textures/misc/texture-srgb-upload.html
                 checkout/conformance/textures/misc/texture-sub-image-cube-maps.html
                 checkout/conformance/textures/misc/texture-transparent-pixels-initialized.html
                 checkout/conformance/textures/misc/texture-upload-cube-maps.html
@@ -9350,6 +9351,8 @@ skip-if = (os == 'linux' && asan)
 [generated/test_2_conformance__textures__misc__texture-size.html]
 subsuite = webgl2-core
 skip-if = (os == 'linux' && asan) || (os == 'win')
+[generated/test_2_conformance__textures__misc__texture-srgb-upload.html]
+subsuite = webgl2-core
 [generated/test_2_conformance__textures__misc__texture-sub-image-cube-maps.html]
 subsuite = webgl2-core
 [generated/test_2_conformance__textures__misc__texture-transparent-pixels-initialized.html]
@@ -12911,6 +12914,8 @@ skip-if = (os == 'linux' && asan)
 [generated/test_conformance__textures__misc__texture-size.html]
 subsuite = webgl1-core
 skip-if = (os == 'android') || (os == 'win')
+[generated/test_conformance__textures__misc__texture-srgb-upload.html]
+subsuite = webgl1-core
 [generated/test_conformance__textures__misc__texture-sub-image-cube-maps.html]
 subsuite = webgl1-core
 skip-if = (os == 'android')
