--- a/taskcluster/ci/toolchain/clang-tidy.yml
+++ b/taskcluster/ci/toolchain/clang-tidy.yml
@@ -20,6 +20,7 @@ job-defaults:
             - 'build/clang-plugin/*.py'
             - 'build/clang-plugin/moz.build'
             - 'build/clang-plugin/Makefile.in'
+            - 'build/clang-plugin/ThreadAllows.txt'
             - 'build/build-clang/build-clang.py'
     fetches:
         fetch:
