Bug 1796085 - Part 2: Rename _purgeHTTPCache as _removeDirectory r=valentin,necko-reviewers
This background task currently is generic enough that it can be reused for other components, namely QuotaCleaner in the child patches. Renaming makes it clear that it's generic.

Differential Revision: https://phabricator.services.mozilla.com/D156912

--- a/toolkit/components/backgroundtasks/tests/xpcshell/xpcshell.ini
+++ b/toolkit/components/backgroundtasks/tests/xpcshell/xpcshell.ini
@@ -23,6 +23,8 @@ run-sequentially = Uses global profile directory `DefProfRt`
 [test_backgroundtask_policies.js]
 [test_backgroundtask_profile_is_slim.js]
 [test_backgroundtask_profile_service_configuration.js]
+[test_backgroundtask_removeDirectory.js]
+skip-if = os == "android" # MultiInstanceLock doesn't work on Android
 [test_backgroundtask_shouldprocessupdates.js]
 [test_backgroundtask_simultaneous_instances.js]
 [test_backgroundtask_specific_pref.js]
