--- a/toolkit/components/cookiebanners/test/browser/browser.ini
+++ b/toolkit/components/cookiebanners/test/browser/browser.ini
@@ -1,10 +1,15 @@
 [DEFAULT]
-
+support-files =
+    head.js
 [browser_bannerClicking.js]
 support-files =
     file_banner.html
     file_banner_b.html
     file_delayed_banner.html
+[browser_bannerClicking_slowLoad.js]
+support-files =
+    file_delayed_banner_load.html
+    slowSubresource.sjs
 [browser_cookiebannerservice.js]
 [browser_cookieinjector.js]
 support-files =
