--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -266,7 +266,7 @@ delta = "0.10.1 -> 0.10.2"
 who = "Paul Adenot <paul@paul.cx>"
 criteria = "safe-to-deploy"
 delta = "0.10.2 -> 0.10.3"
-note = """
+notes = """
 Mozilla-developed package.
 """
 
@@ -287,7 +287,7 @@ delta = "0.10.1 -> 0.10.2"
 who = "Paul Adenot <paul@paul.cx>"
 criteria = "safe-to-deploy"
 delta = "0.10.2 -> 0.10.3"
-note = """
+notes = """
 Mozilla-developed package.
 """
 
@@ -551,6 +551,12 @@ who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "51.2.0 -> 51.4.0"
 
+[[audits.glean]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "51.4.0 -> 51.5.0"
+notes = "Maintained by the Glean team at Mozilla"
+
 [[audits.glean-core]]
 who = "Jan-Erik Rediger <jrediger@mozilla.com>"
 criteria = "safe-to-deploy"
@@ -591,6 +597,12 @@ notes = "Bug fix release with minimal changes, changes done by myself"
 who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "51.2.0 -> 51.4.0"
+
+[[audits.glean-core]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "51.4.0 -> 51.5.0"
+notes = "Maintained by the Glean team at Mozilla"
 
 [[audits.goblin]]
 who = "Jan-Erik Rediger <jrediger@mozilla.com>"
@@ -1298,6 +1310,12 @@ who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "0.19.6 -> 0.20.0"
 
+[[audits.uniffi]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "0.20.0 -> 0.21.0"
+notes = "Maintained by the Glean and Application Services team."
+
 [[audits.uniffi_bindgen]]
 who = "Travis Long <tlong@mozilla.com>"
 criteria = "safe-to-deploy"
@@ -1314,6 +1332,12 @@ notes = "Maintained by the Glean and Application Services team."
 who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "0.19.6 -> 0.20.0"
+
+[[audits.uniffi_bindgen]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "0.20.0 -> 0.21.0"
+notes = "Maintained by the Glean and Application Services team."
 
 [[audits.uniffi_build]]
 who = "Travis Long <tlong@mozilla.com>"
@@ -1332,6 +1356,12 @@ who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "0.19.6 -> 0.20.0"
 
+[[audits.uniffi_build]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "0.20.0 -> 0.21.0"
+notes = "Maintained by the Glean and Application Services team."
+
 [[audits.uniffi_macros]]
 who = "Travis Long <tlong@mozilla.com>"
 criteria = "safe-to-deploy"
@@ -1348,6 +1378,12 @@ notes = "Maintained by the Glean and Application Services team."
 who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "0.19.6 -> 0.20.0"
+
+[[audits.uniffi_macros]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "0.20.0 -> 0.21.0"
+notes = "Maintained by the Glean and Application Services team."
 
 [[audits.uniffi_meta]]
 who = "Jan-Erik Rediger <jrediger@mozilla.com>"
@@ -1359,6 +1395,12 @@ notes = "Maintained by the Glean and Application Services team."
 who = "Perry McManis <pmcmanis@mozilla.com>"
 criteria = "safe-to-deploy"
 delta = "0.19.6 -> 0.20.0"
+
+[[audits.uniffi_meta]]
+who = "Jan-Erik Rediger <jrediger@mozilla.com>"
+criteria = "safe-to-deploy"
+delta = "0.20.0 -> 0.21.0"
+notes = "Maintained by the Glean and Application Services team."
 
 [[audits.void]]
 who = "Bobby Holley <bobbyholley@gmail.com>"
