Bug 1664511 - [devtools] Resolve inline & inherited-inline selectors for rule-editor on demand r=nchevobbe
unique selectors for inline and inherited inline rules will be retrieved on demand.

Differential Revision: https://phabricator.services.mozilla.com/D159721

--- a/devtools/client/inspector/rules/test/browser_part2.ini
+++ b/devtools/client/inspector/rules/test/browser_part2.ini
@@ -186,6 +186,7 @@ skip-if = ccov #Bug 1432176
 [browser_rules_selector-highlighter_03.js]
 [browser_rules_selector-highlighter_04.js]
 [browser_rules_selector-highlighter_05.js]
+[browser_rules_selector-highlighter_order.js]
 [browser_rules_selector_highlight.js]
 [browser_rules_shadowdom_slot_rules.js]
 [browser_rules_shapes-toggle_01.js]
