--- a/accessible/tests/browser/states/browser.ini
+++ b/accessible/tests/browser/states/browser.ini
@@ -17,3 +17,7 @@ skip-if =
 https_first_disabled = true
 skip-if =
   os == 'win' && bits == 64 && !debug # bug 1652192
+[browser_test_select_visibility.js]
+https_first_disabled = true
+skip-if =
+  os == 'win' && bits == 64 && !debug # bug 1652192
