--- a/browser/components/firefoxview/tests/browser/browser.ini
+++ b/browser/components/firefoxview/tests/browser/browser.ini
@@ -6,6 +6,7 @@ prefs =
 [browser_entrypoint_management.js]
 [browser_firefoxview.js]
 [browser_firefoxview_tab.js]
+[browser_keyboard_focus.js]
 [browser_media_query_dom_sorting.js]
 [browser_notification_dot.js]
 [browser_recently_closed_tabs.js]
