Bug 1461589 - Add support for the CSS font-variant-emoji property to the style system. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D147494

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -167,6 +167,7 @@ rusty-enums = [
     "mozilla::StyleBlend",
     "mozilla::StyleMaskComposite",
     "mozilla::StyleWritingModeProperty",
+    "StyleFontVariantEmoji",
 ]
 allowlist-vars = [
     "NS_ATTRVALUE_.*",
