Bug 1533058 - [browser] Extend BrowserOpenTab to open a custom URL. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D159424

--- a/browser/base/content/test/tabs/browser.ini
+++ b/browser/base/content/test/tabs/browser.ini
@@ -94,6 +94,8 @@ https_first_disabled = true
 [browser_new_tab_insert_position.js]
 https_first_disabled = true
 support-files = file_new_tab_page.html
+[browser_new_tab_url.js]
+support-files = file_new_tab_page.html
 [browser_new_tab_in_privilegedabout_process_pref.js]
 https_first_disabled = true
 skip-if =
