Bug 1797012 - Change NS_STYLE_MATH_STYLE_* macros to enum StyleMathStyle. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D160016

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -110,6 +110,7 @@ rusty-enums = [
     "mozilla::StyleShapeSourceType",
     "mozilla::StyleVisibility",
     "mozilla::StyleBasicShapeType",
+    "mozilla::StyleMathStyle",
     "nsStyleImageLayers_Size_DimensionType",
     "mozilla::StyleBorderCollapse",
     "mozilla::StyleBorderImageRepeat",
