--- a/testing/web-platform/meta/webrtc-stats/supported-stats.html.ini
+++ b/testing/web-platform/meta/webrtc-stats/supported-stats.html.ini
@@ -6,7 +6,9 @@
     expected: FAIL
 
   [inbound-rtp's qpSum]
-    expected: FAIL
+    expected:
+      if release_or_beta and not (os == "linux"): PASS
+      FAIL
 
   [inbound-rtp's estimatedPlayoutTimestamp]
     expected: FAIL
