--- a/testing/web-platform/meta/navigation-timing/secure-connection-start-non-zero.https.html.ini
+++ b/testing/web-platform/meta/navigation-timing/secure-connection-start-non-zero.https.html.ini
@@ -11,4 +11,5 @@
       if (os == "android") and debug and fission: PASS
       if (os == "win") and debug: [FAIL, PASS]
       if (os == "android") and not debug: PASS
+      if (os == "win") and ccov: [FAIL, PASS]
       FAIL
