--- a/taskcluster/ci/hazard/kind.yml
+++ b/taskcluster/ci/hazard/kind.yml
@@ -19,7 +19,7 @@ job-defaults:
     treeherder:
         kind: build
         tier: 1
-    worker-type: b-linux
+    worker-type: b-linux-gcp
     worker:
         max-run-time: 10800
         docker-image: {in-tree: debian11-amd64-build}
