Bug 1795042 - [ci] Migrate 'condprof' tasks from AWS -> GCP, r=MasterWayZ
Depends on D159871

Differential Revision: https://phabricator.services.mozilla.com/D159872

--- a/taskcluster/ci/condprof/kind.yml
+++ b/taskcluster/ci/condprof/kind.yml
@@ -65,7 +65,7 @@ jobs:
                   path: archive
                   type: directory
     linux64-firefox:
-        worker-type: b-linux
+        worker-type: b-linux-gcp
         description: Creates or updates conditioned profiles on Linux
         run-on-projects: ['mozilla-central']
         treeherder:
