Bug 1796968 - set cross-document-nav-same-document-traversal.html as intermittent on more platforms
Bug 1794361 and bug 1795060 had modified the expectations 3 days ago.

Differential Revision: https://phabricator.services.mozilla.com/D160065

--- a/testing/web-platform/meta/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/cross-document-nav-same-document-traversal.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/cross-document-nav-same-document-traversal.html.ini
@@ -2,6 +2,9 @@
   [cross-document navigations are stopped by same-document back()]
     expected:
       if (os == "linux") and fission and debug and not swgl: [FAIL, PASS]
+      if (os == "linux") and fission and debug and swgl: [FAIL, PASS]
       if (os == "linux") and not fission and debug and not swgl: [FAIL, PASS]
       if (os == "linux") and not fission and not debug: [FAIL, PASS]
+      if (os == "linux") and tsan: [FAIL, PASS]
+      if (os == "win") and (bits == 32) and debug: [FAIL, PASS]
       FAIL
