--- a/mots.yaml
+++ b/mots.yaml
@@ -2,7 +2,7 @@
 ---
 repo: mozilla-central
 created_at: '2021-10-14T12:50:40.073465'
-updated_at: '2022-10-20T08:50:11.278470'
+updated_at: '2022-10-24T12:52:11.112046'
 export:
   path: ./docs/mots/index.rst
   format: rst
@@ -213,10 +213,6 @@ people:
     bmo_id: 278074
     name: Daniel Holbert
     nick: dholbert
-  - &dimi
-    bmo_id: 468232
-    name: Dimi Lee
-    nick: dimi
   - &djackson
     bmo_id: 644159
     name: Dennis Jackson
@@ -225,6 +221,10 @@ people:
     bmo_id: 436087
     name: Kannan Vijayan
     nick: djvj
+  - &dlee
+    bmo_id: 468232
+    name: Dimi Lee
+    nick: dlee
   - &dlrobertson
     bmo_id: 705145
     name: Dan Robertson
@@ -757,8 +757,8 @@ people:
     name: Greg Mierzwinski
     nick: sparky
   - &spohl
-    bmo_id: 519726
-    name: Not active
+    bmo_id: 456485
+    name: Stephen A Pohl
     nick: spohl
   - &sstangl
     bmo_id: 383201
@@ -985,7 +985,7 @@ modules:
       - *timhuang
     peers:
       - *baku
-      - *dimi
+      - *dlee
       - *pbz
       - *johannh
     machine_name: core_antitracking
@@ -3131,7 +3131,7 @@ modules:
           - *serg
         peers:
           - *tgiles
-          - *dimi
+          - *dlee
         machine_name: form_autofill
 
       - name: In-product Messaging
@@ -3226,7 +3226,7 @@ modules:
         peers:
           - *jaws
           - *tgiles
-          - *dimi
+          - *dlee
           - *sfoster
         machine_name: password_manager
 
@@ -3633,5 +3633,5 @@ modules:
         machine_name: webextensions
     machine_name: toolkit
 hashes:
-  config: 65134881bbb4e002a4d94efe5c79895135064c96
-  export: 77b9f5b3d03785ccedee2d81c1808d6b30fb064c
+  config: 8850b02f61b1f5e8519c87ec75a421c770337650
+  export: bc0c9447bd355bf9554147d9065fb4b5ff11240c
